--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
+    "date-fns": "^2.29.3",
     "expo": "~48.0.5",
+    "expo-image-picker": "~14.1.1",
+    "expo-secure-store": "~12.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.3",
-    "expo-secure-store": "~12.1.1",
-    "expo-image-picker": "~14.1.1"
+    "react-native-maps": "1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
